correct word-wrap

--- a/08_layout-stylization/css/style.css
+++ b/08_layout-stylization/css/style.css
@@ -62,6 +62,7 @@ body {
     line-height: 40px;
     color: #333333;
     font-weight: normal;
+
 }
 
 
@@ -101,10 +102,14 @@ body {
 .header-top {
     align-items: center;
     margin-bottom: 30px;
+    /* justify-content: space-around; */
 }
 
 .header-img {
     margin-right: 30px;
+    min-width: 261px;
+    min: height 54px;
+    : ;
     width: 261px;
     height: 54px;
     border-radius: 15px;
@@ -117,18 +122,22 @@ body {
     font-size: 20px;
     line-height: 20px;
     color: #666666;
+    min-width: 164px;
 }
 
 .header-link {
     font-size: 16px;
     line-height: 16px;
     color: #CC9933;
+    max-width: 700px;
 }
 
 .header-nav-glob {
     border: 1px solid #fff;
     border-radius: 15px;
     background-color: #FFF;
+    padding: 14px 45px;
+    justify-content: space-between;
 }
 
 .header-nav {
@@ -138,37 +147,57 @@ body {
     line-height: 16px;
     color: #666666;
     justify-content: space-between;
+    overflow-wrap: break-word;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
     /* border: 1px solid #CC9933; */
 }
 
-.header-nav-item:not(:last-child) {
+.header-nav-item {
+    max-width: 115px;
+    min-width: 44px;
     align-items: center;
-    margin-right: 45px;
-    /* padding-right: 30px; */
+    justify-content: space-between;
+    word-wrap: break-word;
+}
+
+
+.header-nav-item:not(:last-child) {
+
+    margin-right: 40px;
+
 }
 
 .header-nav-list {
     align-items: center;
     border-right: 1px solid #E1E1E1;
     padding-right: 56px;
-    padding-left: 45px;
-    padding: 27px 56px 27px 45px;
+    max-width: 700px;
 
 }
 
 .header-buttons {
     padding-left: 40px;
+    justify-content: end;
 }
 
 .header-button {
+    max-width: 180px;
     padding: 13px 20px;
     border: 1px solid #CC9933;
     border-radius: 10px;
     font-size: 16px;
     line-height: 16px;
     color: #CC9933;
-    margin-top: 14px;
-    margin-bottom: 14px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+
 }
 
 .header-button:not(:last-child) {
@@ -177,14 +206,19 @@ body {
 
 /* specials */
 
+.title2 {
+    word-wrap: break-word;
+}
 
-
-
+.title3 {
+    word-wrap: break-word;
+}
 
 .specials-title {
     margin: 0;
     margin-bottom: 20px;
     padding-left: 40px;
+    padding-right: 40px;
 
 }
 
@@ -195,7 +229,7 @@ body {
 
 .special-list {
     /* align-items: flex-start; */
-    justify-content: stretch;
+    justify-content: space-between;
     width: 100%;
 }
 
@@ -263,12 +297,14 @@ body {
     font-size: 20px;
     line-height: 20px;
     color: #FFFFFF;
+    word-wrap: break-word;
 }
 
 .specials-link {
     font-size: 16px;
     line-height: 16px;
     color: #FFCC66;
+    word-wrap: break-word;
 }
 
 /* .title-specials {
@@ -297,15 +333,16 @@ body {
     margin: 0;
     margin-bottom: 11px;
     padding-left: 40px;
+    padding-right: 40px;
 }
 
 .about-text {
     margin: 0;
-    width: 888px;
+    max-width: 888px;
     font-size: 16px;
     line-height: 200%;
     color: #000000;
-
+    word-wrap: break-word;
 }
 
 /* service */
@@ -322,10 +359,12 @@ body {
 
 .services-list {
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .services-item {
     width: 573px;
+    min-height: 330px;
     margin-bottom: 23px;
     background-repeat: no-repeat;
     background-size: 573px 165px;
@@ -359,6 +398,7 @@ body {
 
 .service-text {
     padding: 191px 126px 50px 45px;
+    word-wrap: break-word;
 }
 
 .services-list-title {
@@ -375,6 +415,7 @@ body {
     font-size: 16px;
     line-height: 200%;
     color: #000000;
+    word-wrap: break-word;
 }
 
 /* plus */
@@ -383,10 +424,12 @@ body {
     margin: 0;
     margin-bottom: 30px;
     padding-left: 40px;
+    padding-right: 40px;
 }
 
 .plus-list {
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .plus-item {
@@ -415,6 +458,8 @@ body {
     margin: 0;
     padding-left: 40px;
     margin-bottom: 30px;
+    padding-right: 40px;
+    word-wrap: break-word;
 }
 
 .plus-item-text {
@@ -422,6 +467,7 @@ body {
     font-size: 16px;
     line-height: 200%;
     color: #000000;
+    word-wrap: break-word;
 }
 
 .plus-item-svg {
@@ -439,6 +485,7 @@ body {
     border-radius: 15px;
     overflow: hidden;
     background-color: #FFFFFF;
+    min-height: 440px;
 }
 
 .place-item:not(:nth-child(3n)) {
@@ -448,6 +495,7 @@ body {
 .place-text {
     flex-direction: column;
     padding: 40px;
+
 }
 
 .place-paragraph {
@@ -461,6 +509,7 @@ body {
     font-size: 16px;
     line-height: 16px;
     /* color: #999999; */
+    word-wrap: break-word;
 }
 
 .place-item-subtitle-cost {
@@ -476,14 +525,17 @@ body {
     font-size: 16px;
     line-height: 16px;
     color: #000000;
+    word-wrap: break-word;
 }
 
 .place-desc {
     margin: 0;
     margin-bottom: 20px;
+    /* margin-bottom: auto; */
     font-size: 16px;
     line-height: 16px;
     color: #999999;
+    word-wrap: break-word;
 }
 
 .place-link {
@@ -492,6 +544,9 @@ body {
     border-radius: 10px;
     margin-right: auto;
     font-size: 16px;
+    word-wrap: break-word;
+    max-width: 263px;
+
 }
 
 .place-item-last {
@@ -509,4 +564,9 @@ body {
     font-weight: 500;
     font-size: 20px;
     line-height: 200%;
+}
+
+.place-item-last-link{
+    word-wrap: break-word;
+    max-width: 265px;
 }
